User Manual Changes

--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -28,7 +28,7 @@
 
 
 \begin{document}
-\title{Estimation Swarm User Manual}
+\title{Crowd Source User Manual}
 \subtitle{ Git: \url{https://github.com/FrikkieSnyman/COS301_GroupProject}\\
 Client: Epi-Use
 }
