Did a find and replace on everything in the repo, seems like it was fine

--- a/documentation/UserManual/Installation.tex
+++ b/documentation/UserManual/Installation.tex
@@ -4,7 +4,7 @@
 	    	\caption{MEAN.js logo}
 	    	\label{fig:MEAN}
    	\end{figure}
-The installation is quite an easy process as estimate swarm uses standard web technologies. We can deploy our system in one of two ways. One way is to use a docker image to load the system the other is to set it up by loading all the dependancies to a machine. Estimation swarm is using the mean stack so should you encounter any issues please consult their webpage. \url{http://mean.io}. The github readme also houses the installation instructions.
+The installation is quite an easy process as Crowd Source uses standard web technologies. We can deploy our system in one of two ways. One way is to use a docker image to load the system the other is to set it up by loading all the dependancies to a machine. Crowd Source is using the mean stack so should you encounter any issues please consult their webpage. \url{http://mean.io}. The github readme also houses the installation instructions.
 \subsection{Setting up the environment}
 To use our application the following prerequisites need to be met. Please note that installing packages globally requires super user privillages on unix based systems and administrator privileges on windows.
 \begin{itemize}
@@ -20,7 +20,7 @@ To use our application the following prerequisites need to be met. Please note t
 	\newline
 	npm install -g grunt-cli
 \end{itemize}
-Estimation swarm is now ready to be started. First make sure that Mongodb is up and running. Next clone the project form gitHub by running the following command.
+Crowd Source is now ready to be started. First make sure that Mongodb is up and running. Next clone the project form gitHub by running the following command.
 \newline
 git clone \url{https://github.com/FrikkieSnyman/COS301_GroupProject.git}
 \newline
@@ -28,7 +28,7 @@ Install the dependancies by running the following command.
 \newline
 npm install
 \newline
-Running the grunt command in the root directory of the project will start the server. The server will start in the development environment on port 3000 by default. Estimation swarm currently supports running in three environment types.
+Running the grunt command in the root directory of the project will start the server. The server will start in the development environment on port 3000 by default. Crowd Source currently supports running in three environment types.
 \begin{itemize}
 	\item{Development} is used to run the server for development, non minified files are used so that errors can be properly shown.
 	\item{Production} loads all the minified sources and also only non development dependancies. This is the method to use when running the server for commercial use.
