User manual update for final print

--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -7,6 +7,7 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{float}
 \usepackage{titlesec}
+\usepackage{titlepic}
 
 \setcounter{secnumdepth}{4}
 
@@ -28,7 +29,8 @@
 
 
 \begin{document}
-\title{Crowd Source User Manual}
+\titlepic { \centering\includegraphics[width=1.0\textwidth]{Swarm_Buzz}}
+\title{User Manual}
 \subtitle{ Git: \url{https://github.com/FrikkieSnyman/COS301_GroupProject}\\
 Client: Epi-Use
 }
@@ -41,7 +43,6 @@ Andre Calitz 13020006\\
 Chris Cloete 13029721\\}
 
 \maketitle1
-
 \tableofcontents
 \pagebreak
 
