--- a/documentation/UserManual/usesys.tex
+++ b/documentation/UserManual/usesys.tex
@@ -86,7 +86,7 @@ After the estimation has been completed a report will be generated based on the 
 	The normal distribution is a important part of the delphi wide band method. It indicates to the user if there is consensus regarding project as a whole. Typically a value between 10 percent to 20 percent indicate that the users have consensus. Anything lower than 10 percent indicate that there is still room for improvement. The higher the value of the y axis is the closer estimations are grouped together. The lower y axis value is the estimations is spread out and generally users do not agree on particular project.
 \end{itemize}
 \subsection{Organisations}
-Organisations can be used to group related projects or divisions of a company. This helps the user to not  be overwhelmed by the sheer number of estimators/projects. Only relevant information for a user is displayed. This increases the usability of the system dramatically. Users can be part of multiple organisations or they can belong to no organisation at all. This allows the estimation system to scale from big to small companies as required. We can create organisations under the organisation tab and selecting the add organisations FAB button.
+Organisations can be used to group related projects and users. This can in turn simulate the divisions of a company. This helps the user to not  be overwhelmed by the sheer number of estimators/projects, as only relevant information for a user is displayed. This increases the usability of the system dramatically. Users can be part of multiple organisations or they can belong to no organisation at all. This allows the estimation system to scale from big to small companies as required. We can create organisations under the organisation tab by selecting the add organisations FAB button.
 	\begin{figure}[H]
 	    	\centering
 	    	\fbox{\includegraphics[width=0.5\textwidth]{AddOrg}}
