--- a/documentation/SoftwareReq/qualityrequirements.tex
+++ b/documentation/SoftwareReq/qualityrequirements.tex
@@ -15,7 +15,7 @@
 		\line(1, 0){250}
 		\end{center}
 	{\bfseries Usability:}
-	Usability is important since the process of making estimations should not be cumbersome and frustrating for the users. The system is meant to improve the process of making estimations and user experience is very important to ensure that users give the correct-, honest estimations without rushing the process, because it's tedious, and possibly affecting the outcome of the estimation decisions.
+	Usability is important since the process of making estimations should not be cumbersome and frustrating for the users. The system is meant to improve the process of making estimations and user experience is very important to ensure that users give correct and honest estimations without rushing the process, because it's tedious, and possibly affecting the outcome of the estimation decisions.
 	% \\ \\
 		\begin{itemize}
 			\item{\bfseries Templating:}
