--- a/documentation/SoftwareReq/archpatterns.tex
+++ b/documentation/SoftwareReq/archpatterns.tex
@@ -28,7 +28,7 @@ We will use the MVC pattern to implement the user interface.
 \end{itemize}
 
 \subsubsection{Observer Design Pattern}
-The mediator pattern is used by the Socket.IO library to allow real-time updating of a page during estimation. The main purpose is to ensure that estimators are able to communicate with each other in real-time by commenting on specific nodes and discussing possible confusion or ambiguity and also avoid race conditions when many estimators are attempting to change the project tree at the same time. When an estimator comments on a project feature or edits the project tree the server is notified of the change and it then propagates the new updated project state to all of the remote users currently viewing the project tree or discussion thread.
+The observer pattern is used by the Socket.IO library to allow real-time updating of a page during estimation. The main purpose is to ensure that estimators are able to communicate with each other in real-time by commenting on specific nodes and discussing possible confusion or ambiguity and also avoid race conditions when many estimators are attempting to change the project tree at the same time. When an estimator comments on a project feature or edits the project tree the server is notified of the change and it then propagates the new updated project state to all of the remote users currently viewing the project tree or discussion thread.
 \begin{itemize}
 	\item{Observers}
 	\newline
