Updating organisations into the projects documentation

--- a/documentation/SoftwareReq/Software requirements.tex
+++ b/documentation/SoftwareReq/Software requirements.tex
@@ -7,6 +7,7 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{float}
 \usepackage{titlesec}
+\usepackage{titlepic}
 
 \setcounter{secnumdepth}{4}
 
@@ -28,6 +29,7 @@
 
 
 \begin{document}
+\titlepic { \centering\includegraphics[width=1.0\textwidth]{Swarm_Buzz}}
 \title{Software Requirements Speciﬁcation and Technology Neutral Process Design}
 \subtitle{ Git: \url{https://github.com/FrikkieSnyman/COS301_GroupProject}}
 
