--- a/documentation/SoftwareReq/Software requirements.tex
+++ b/documentation/SoftwareReq/Software requirements.tex
@@ -21,13 +21,10 @@
     \begin{center}\large#1\end{center}
     \vskip0.5em}%
 }
-
 \titleformat{\paragraph}
 {\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
-\titlespacing*{\paragraph}
+\titlespacing*{\paragraphd}
 {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
-
-
 \begin{document}
 \titlepic { \centering\includegraphics[width=1.0\textwidth]{Swarm_Buzz}}
 \title{Software Requirements Speciﬁcation and Technology Neutral Process Design}
