--- a/documentation/SoftwareReq/usecase.tex
+++ b/documentation/SoftwareReq/usecase.tex
@@ -386,67 +386,38 @@ Users with sufficient privileges can create organisations. This will persist the
    	\end{figure}
 \end{itemize}
 
-\paragraph{Get project - priority: critical}
-Users with sufficient privileges can retrieve organization to view them, or to be used for other purposes. This use case must thus return a representation of the organisation ant the projects and users that belongs to the organisation.
+\paragraph{Get Organisation - priority: critical}
+Users with sufficient privileges can retrieve organisation to view them, or to be used for other purposes. This use case must thus return a representation of the organisation and the projects and users that belongs to the organisation.
 \begin{itemize}
 	\item Services contract:\\ \\
-	The getOrganizationRequest contains the name of the Organization that must be retrieved. The getOrganizationResult contains the Organization that has been identified by the OrganizationName.
+	The getOrganisationRequest contains the name of the Organisation that must be retrieved. The getOrganizationResult contains the Organisation that has been identified by the OrganizationName.
 	\begin{figure}[H]
     	\centering
     	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractgetOrganization}}
-    	\caption{getOrganization services contract}
-    	\label{fig:getOrganization_services_contract}
+    	\caption{getOrganisation services contract}
+    	\label{fig:getOrganisation_services_contract}
    	\end{figure}
 \end{itemize}
 
-\paragraph{Delete project - priority: important}
-Projects can be removed from the database entirely by deleting them. This action can only be done by authorised user such as the owner of a project.
+\paragraph{Update Organisation - priority: critical}
+This enables users to update organisation, if they have sufficient privileges.
 
 \begin{itemize}
 	\item Services contract:\\ \\
-	The deleteProjectRequest contains a reference to the Project that must be deleted, which can be obtained by calling the getProject function.
+	The updateOrganisationRequest contains a reference to the Organisation that needs to be update which can be obtained by making use of the getOrganisation functionality. The updateOrganisationRequest also contains a reference to the updated organisation, which can either be an entirely different organisation, or the same organisation as represented by oldOrganisation, but with some changes applied to it.
 	\begin{figure}[H]
     	\centering
-    	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractDeleteProject}}
-    	\caption{deleteProject services contract}
-    	\label{fig:deleteProject_services_contract}
-   	\end{figure}
-\end{itemize}
-
-
-\paragraph{Update project - priority: critical}
-This enables users to update projects, if they have sufficient privileges, by adding or removing task nodes to and from the project tree.
-
-\begin{itemize}
-	\item Services contract:\\ \\
-	The updateProjectRequest contains a reference to the project that needs to be update which can be obtained by making use of the getProject functionality. The updateProjectRequest also contains a reference to the updated project, which can either be an entirely different project, or the same project as represented by oldProject, but with some changes applied to it.
-	\begin{figure}[H]
-    	\centering
-    	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractupdateProject}}
-    	\caption{updateProject services contract}
-    	\label{fig:updateProject_services_contract}
-   	\end{figure}
-\end{itemize}
-
-\paragraph{Discuss task - priority: important}
-Tasks that form part of projects can be discussed on in a chat system. All discussions are saved to the database and update in real-time.
-
-\begin{itemize}
-	\item Services contract:\\ \\
-	The discussTaskRequest contains information about the task that is being discussed. The taskID must exist within the project
-	\begin{figure}[H]
-    	\centering
-    	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractDiscussTask}}
-    	\caption{discussTask services contract}
-    	\label{fig:discussTask_services_contract}
+    	\fbox{\includegraphics[width=1.0\textwidth]{servicesContractupdateOrganisation}}
+    	\caption{updateOrganisation services contract}
+    	\label{fig:updateOrganisation_services_contract}
    	\end{figure}
 \end{itemize}
 
 \subsubsection{Domain model}
-The domain model for the Project module requires that tasks being created and added to the tree, be persisted. Each project holds a reference to its parent, which is also of type Project. Furthermore, each Project holds a list of all its children, which once again, are also of type Project. Each instance of Project is represented as a Task object, which contains references to estimations made on that specific task.
+The domain model for the Organisation module requires that users being added to the organisation, be persisted. Each Organisation holds a reference to its projects, which is of type Project. Furthermore, each Project holds a list of all its users, which are also of type user.
 \begin{figure}[H]
 	\centering
-	\fbox{\includegraphics[width=0.5\textwidth]{projectdomainmodel}}
-	\caption{Project domain model}
-	\label{fig:Project_domain_model}
+	\fbox{\includegraphics[width=0.5\textwidth]{organisationdomainmodel}}
+	\caption{Organisation domain model}
+	\label{fig:Orgnaisnation_domain_model}
 \end{figure}
