Added the github links to the documnetnation. This shows users how to create issues on github.

--- a/documentation/UserManual/troubleshooting.tex
+++ b/documentation/UserManual/troubleshooting.tex
@@ -16,6 +16,14 @@ If the user has not saved the project tree, and attempts to navigate away from t
 	    	\label{fig: Confirmation}
    	\end{figure}
 
-If the user wishes to discard changes, he/she can navigate away from the page without saving the changes. Otherwise, the user can cancel the navigation process, and then save the project, and then continue to navigate away.
-
-A similiar process is performed when a user is in the process of Estimation.
+If the user wishes to discard changes, he/she can navigate away from the page without saving the changes. Otherwise, the user can cancel the navigation process, and then save the project, and then continue to navigate away. A similar process is performed when a user is in the process of Estimation.
+\subsection{Error Reporting}
+Should you encounter a error or need some additional help do not hesitate to create a issues on the 
+\href{https://github.com/FrikkieSnyman/COS301_GroupProject}{gitHub webpage} of the project.
+	\begin{figure}[H]
+	    	\centering
+	    	\fbox{\includegraphics[width=0.5\textwidth]{gitHubIssues}}
+	    	\caption{Issue Tracker}
+	    	\label{fig: Issue Tracker}
+   	\end{figure}
+The community is always ready to support you.
