--- a/documentation/UserManual/usermanual.tex
+++ b/documentation/UserManual/usermanual.tex
@@ -8,7 +8,14 @@
 \usepackage{float}
 \usepackage{titlesec}
 \usepackage{titlepic}
-
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=cyan,
+}
+\urlstyle{same}
 \setcounter{secnumdepth}{4}
 
 \DeclareGraphicsExtensions{.png}
